# PDFConvertor

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
docs/: 01_ANALISIS_FUNCIONAL.md  02_FLUJOGRAMA.md  03_REGLAMENTO_DESARROLLO.md  04_PLAN_DESARROLLO_SCRUM.md  05_GUIA_USUARIO.md  06_GUIA_DESARROLLADOR.md  07_VALIDACION_FINAL.md
scripts/: install.sh  test.sh
src/: __init__.py  cli.py  main.py
src/config/: __init__.py  settings.py
src/converters/: __init__.py  document_converter.py  parallel_processor.py  pdf_generator.py
src/utils/: __init__.py  exceptions.py  logger.py  progress.py
src/validators/: __init__.py  batch_validator.py  file_validator.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_end_to_end.py
tests/unit/: __init__.py  test_config.py  test_validators.py
